# django-sql-debug

./: LICENSE  README.md  setup.cfg
django_sql_debug/: __init__.py  apps.py  middlewares.py  output.py  sql.py  test.py
