[metadata]
name = django-sql-debug
version = 0.0.2
author = Matheus Cansian
author_email = dev@drpexe.com
description = Allow users to see in the console all SQL queries made by the Django ORM.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mscansian/django-sql-debug
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    Django >= 3.2.4
packages = find:
include_package_data = true
