[metadata]
name = django-sql-debug
version = 0.0.3
author = Matheus Cansian
author_email = dev@drpexe.com
description = Output in the console the executed SQL of queries made by Django's ORM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mscansian/django-sql-debug
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    Django >= 3.2.4
packages = find:
include_package_data = true
